@startuml

title __CORRECTIONS's Class Diagram__\n

  namespace com.whu.gnss.gnsslogger {
    namespace corrections {
      abstract class com.whu.gnss.gnsslogger.corrections.Correction {
          {static} - initialized : boolean
          {static} - registeredObjects : HashMap<String, Class<? extends Correction>>
          {abstract} + calculateCorrection()
          {static} + getClassByName()
          {abstract} + getCorrection()
          {abstract} + getName()
          {static} + getRegistered()
          {static} + initialize()
          {static} # register()
      }
    }
  }
  

  namespace com.whu.gnss.gnsslogger {
    namespace corrections {
      class com.whu.gnss.gnsslogger.corrections.ShapiroCorrection {
          {static} - NAME : String
          - correctionValue : double
          + ShapiroCorrection()
          + calculateCorrection()
          + getCorrection()
          + getName()
          {static} + registerClass()
      }
    }
  }
  

  namespace com.whu.gnss.gnsslogger {
    namespace corrections {
      class com.whu.gnss.gnsslogger.corrections.TopocentricCoordinates {
          - topocentric : SimpleMatrix
          + TopocentricCoordinates()
          + TopocentricCoordinates()
          + computeTopocentric()
          + getAzimuth()
          + getDistance()
          + getElevation()
      }
    }
  }
  

  namespace com.whu.gnss.gnsslogger {
    namespace corrections {
      class com.whu.gnss.gnsslogger.corrections.TropoCorrection {
          {static} - NAME : String
          - correctionValue : double
          + calculateCorrection()
          + getCorrection()
          + getName()
          {static} + registerClass()
      }
    }
  }
  

  com.whu.gnss.gnsslogger.corrections.ShapiroCorrection -up-|> com.whu.gnss.gnsslogger.corrections.Correction
  com.whu.gnss.gnsslogger.corrections.TropoCorrection -up-|> com.whu.gnss.gnsslogger.corrections.Correction


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
